Bug 295483 - Equity accounts can't be created
Summary: Equity accounts can't be created
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 295816 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-07 17:32 UTC by Cristian Oneț
Modified: 2012-07-27 14:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2012-03-07 17:32:06 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.11 (KHTML, like Gecko) Chrome/17.0.963.46 Safari/535.11
Build Identifier: 

The new account wizard can't be completed because of the parent account selection step which does not show the root equity account when "Show equity accounts" is checked.

Reproducible: Always

Steps to Reproduce:
1. Check "Show equity accounts" in settings
2. Run the new account wizard
3. Select 'Equity' as account type
Actual Results:  
The parent account can't be selected.

Expected Results:  
The parent account should be selectable.
Comment 1 Cristian Oneț 2012-03-07 17:47:09 UTC
Git commit edfec0219ec6066f19fde9cdb77b0190f2e55d7b by Cristian Oneț.
Committed on 07/03/2012 at 18:45.
Pushed by conet into branch 'master'.

Allow the creation of 'Equity' accounts when "Show equity accounts" is checked.

M  +1    -1    kmymoney/dialogs/knewaccountdlg.cpp
M  +1    -1    kmymoney/wizards/newaccountwizard/knewaccountwizard.cpp

http://commits.kde.org/kmymoney/edfec0219ec6066f19fde9cdb77b0190f2e55d7b
Comment 2 Cristian Oneț 2012-03-07 17:48:46 UTC
Git commit 0161843f4a9a2558ed3d8a8509c7a408fe3167e3 by Cristian Oneț.
Committed on 07/03/2012 at 18:45.
Pushed by conet into branch '4.6'.

Allow the creation of 'Equity' accounts when "Show equity accounts" is checked.
(cherry picked from commit edfec0219ec6066f19fde9cdb77b0190f2e55d7b)

M  +1    -1    kmymoney/dialogs/knewaccountdlg.cpp
M  +1    -1    kmymoney/wizards/newaccountwizard/knewaccountwizard.cpp

http://commits.kde.org/kmymoney/0161843f4a9a2558ed3d8a8509c7a408fe3167e3
Comment 3 Cristian Oneț 2012-03-12 08:34:40 UTC
*** Bug 295816 has been marked as a duplicate of this bug. ***
Comment 4 Mike 2012-07-26 04:31:17 UTC
This is still an issue for me and I am using version 4.6.2.

Did this patch make it into the 4.6.2 release?
Comment 5 Cristian Oneț 2012-07-27 05:46:29 UTC
(In reply to comment #4)
> This is still an issue for me and I am using version 4.6.2.
> 
> Did this patch make it into the 4.6.2 release?

As the 'Version fixed in' field of this report states it will make in in the 4.6.3 version (looks like it will be released somewhere between the end of August and the beginning of September). It's not in 4.6.2.
Comment 6 Mike 2012-07-27 14:05:48 UTC
Don't know how I missed that Cristian.  Thanks for taking the time to point it out for me.  I'm absolutely loving kMyMoney.  You guys have done an amazing job.  Just awesome.