Allow the creation of 'Equity' accounts when "Show equity accounts" is checked.

BUG: 295483